[package]
name = "minerdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "miner_rip_bin"
path = "src/main.rs"

[lib]
name = "minerdata"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.71"
binread = "2.2.0"
png = "0.17.9"
